fixed overflow on x due to image size issues

--- a/src/styles/LinkInBio.module.css
+++ b/src/styles/LinkInBio.module.css
@@ -16,13 +16,11 @@ div.LinkInBio {
     width: 100%;
 
     img {
-      /* max-width: 6rem;
-      max-height: auto; */
-
-      max-width: 80%;
-      height: auto;
-      /* display: block;
-      box-sizing: border-box; */
+      max-width: 80%
+        /* 6rem */
+      ;
+      /* height: auto; */
+      /* max-height: auto; */
     }
   }
 
@@ -76,7 +74,7 @@ div.LinkInBio {
     header {
       img {
         max-width: 32rem;
-        min-height: auto;
+        /* min-height: auto; */
       }
     }
 
